refactor: map based LunchServiceRegistry